# tordo

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: quality.yml
ableton_agent/: analysis.py  archive.py  cli.py  client.py  diff.py  midi_import.py  plan_preflight.py  plans.py  project_cleanup.py  schema.py  verification.py
remote-script/AbletonAgentBridge/: __init__.py  bridge.py
remote-script/TordoBridge/: __init__.py  bridge.py
skills/tordo/: SKILL.md
skills/tordo/agents/: openai.yaml
skills/tordo/references/: contract.md  plan-schema.md  troubleshooting.md  workflows.md
skills/tordo/scripts/: doctor.py
tests/: test_cli_contract.py  test_doctor.py  test_packaging.py  test_plan_preflight.py  test_public_readme.py  test_real_set_contract.py  test_release_docs.py  test_remote_install.py  test_skill_package.py  test_verification.py
tools/: check_operation_registry.py  check_package_artifacts.py  install_remote_script.py  validate_real_set_contract.py
tordo/: analysis.py  archive.py  bridge_client.py  cli.py  client.py  diff.py  doctor.py  midi_import.py  paths.py  plan_preflight.py  plans.py  proofs.py  remote_install.py  schema.py  selectors.py  verification.py
