[project]
name = "tordo"
version = "0.1.0"
description = "Agent-friendly experiments for reading and controlling Ableton Live."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.3",
]

[project.scripts]
ableton-agent = "ableton_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ableton_agent"]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
