[project]
name = "tordo"
version = "0.1.0"
description = "Agent-facing CLI toolkit for safely inspecting and controlling Ableton Live."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.3",
]
keywords = ["ableton", "ai-agent", "cli", "live", "midi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.scripts]
tordo = "tordo.cli:main"

[project.urls]
Repository = "https://github.com/deadjoe/tordo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tordo"]

[tool.hatch.build.targets.wheel.force-include]
"remote-script/TordoBridge" = "tordo/remote_assets/TordoBridge"

[dependency-groups]
dev = [
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
